deploy/overlays/prod/ingest-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-service
spec:
  template:
    spec:
      containers:
        - name: counter-service
